Add check for decl attributes being applied to types in function declaration (fixes SR-215)